substrate/frame/support/test/tests/construct_runtime_v2_ui/missing_pallets.stderr
error: Missing `#[frame::pallets]`
 --> tests/construct_runtime_v2_ui/missing_pallets.rs:2:1
  |
2 | mod runtime {
  | ^^^
